# python-training

./: .coverage  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: 01_tutorial.md  index.md
docs/api/: acordes.md  campo_harmonico.md  escalas.md
python_training/: acordes.py  campo_harmonico.py  cli.py  escalas.py
site/: 404.html  index.html  objects.inv
site/01_tutorial/: index.html
site/02_contribua/: index.html
site/api/acordes/: index.html
site/api/campo_harmonico/: index.html
site/api/escalas/: index.html
tests/: test_cli.py  test_escalas.py  test_notas.py
